--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "MyIonic2Project",
-  "app_id": "",
+  "name": "Halb",
+  "app_id": "fe91ed1e",
   "v2": true,
   "typescript": true
 }
